ethereum/secure-rpc-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-rpc
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: reth-bootnode
  ports:
    - protocol: TCP
      port: 8545
      targetPort: 8545
